Adcionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At soluta temporibus natus deserunt magni quas molestiae animi omnis quo, labore earum voluptates voluptate consequuntur reiciendis vero nesciunt possimus perspiciatis. Accusantium!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel minus molestiae reprehenderit dolorem numquam non atque rerum dolorum veritatis quo nihil, sequi tenetur. Veniam sint explicabo et, quaerat similique aliquid.</p>
 </body>
 </html>
